Fix usps on ie

--- a/src/components/usps/usps.scss
+++ b/src/components/usps/usps.scss
@@ -44,11 +44,15 @@ $usps_show-carousel-arrows: false !default;
             }
         }
     }
-    
+
     #{$root}__image {
         max-width: $usps_max-image-width;
         max-height: $usps_max-image-height;
         margin: $usps_image-margin;
+
+        .ie11 & {
+            height: 100%;
+        }
     }
 
     #{$root}__text {
